# butterfly

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile_js  Readme.md
CMake/: Emscripten.cmake  FindSnappy.cmake  Util.cmake
docs/bindings/: javascript.txt
examples/cpp/: 01-basic.cpp  02-spew-types.cpp  03-props.cpp  04-deathmap.cpp  05-seeking.cpp  06-events.cpp  07-combatlog.cpp
examples/js/: example.js
examples/py/: 01-basic.py  03-props.py
proto/google/protobuf/: descriptor.proto
src/bindings_javascript/: CMakeLists.txt  pre.js
src/bindings_javascript/private/: api0.cpp  api1.cpp  base64.hpp  protobuf.hpp  stubs.hpp  util.hpp
src/bindings_python/: CMakeLists.txt
src/bindings_python/private/: bindings.cpp  pyvisitor.hpp
src/butterfly/: CMakeLists.txt
src/butterfly/private/: alloc.cpp  alloc.hpp  combatlog.cpp  config_internal.hpp  dem.cpp  demfile.cpp  entity.cpp  fieldpath.hpp  fieldpath_huffman.cpp  fieldpath_huffman.hpp  fieldpath_operations.hpp  flattened_serializer.cpp  flattened_serializer.inc  flattened_serializer.inline  parser.cpp  particle.cpp  property_decoder.cpp  quantized.hpp  resource_manifest.cpp  resources.cpp  resources.hash.inline  resources.trie.inline  stringtable.cpp  util_ascii_table.hpp  util_assert.cpp  util_huffman.hpp  util_lzss.cpp  util_lzss.hpp  util_mempool.hpp  util_murmur.hpp  util_string.hpp  util_varint.hpp  util_vpk.cpp
src/butterfly/public/butterfly/: butterfly.hpp  combatlog.hpp  dem.hpp  demfile.hpp  entity.hpp  entity_classes.hpp  eventlist.hpp  flattened_serializer.hpp  packets.hpp  parser.hpp  particle.hpp  property.hpp  property_decoder.hpp  property_type.hpp  quantized.hpp  resource_manifest.hpp  resources.hpp  stringtable.hpp  util_assert.hpp  util_bitstream.hpp  util_chash.hpp  util_delegate.hpp  util_dict.hpp  util_noncopyable.hpp  util_platform.hpp  util_ringbuffer.hpp  util_vpk.hpp  util_ztime.hpp  visitor.hpp
src/butterfly/test/: main.cpp
src/butterfly/test/butterfly/: util_assert.cpp  util_chash.cpp  util_delegate.cpp  util_dict.cpp  util_noncopyable.cpp  util_platform.cpp  util_ringbuffer.cpp  util_string.cpp  util_varint.cpp  util_ztime.cpp
src/butterfly_proto/: CMakeLists.txt
src/butterfly_trie/: CMakeLists.txt  license.txt  readme.txt
src/butterfly_trie/private/: fmemopen.c  tx.cpp
src/butterfly_trie/public/butterfly/trie/: tx.hpp
src/ex_catch/: CMakeLists.txt
src/ex_protobuf/: CMakeLists.txt
src/ex_snappy/: CMakeLists.txt
src/ex_variant/: CMakeLists.txt
src/tools/: CMakeLists.txt
src/tools/reslookup/: CMakeLists.txt  gen.cpp
